--- a/style.css
+++ b/style.css
@@ -526,6 +526,12 @@ button {
     transition: all .3s ease-in-out;
 }
 
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .scrollToTop span {
     margin-top: 6px;
 }
@@ -695,6 +701,11 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
+}
+
+.width-3 {
+    max-width: 300px;
+
 }
 
 .cta-hero {
